# calcsForConversion

./: .gitignore  LICENSE  README.md  pyproject.toml  req.txt  requirements.txt  requirements_dup.txt  setup.py
converter/: converter.py  test_pytest.py
converters/: README.md  binconverter.py  importester3.py
converters/submodule/: importester1.py
docs/: README.md
outsidemodule/: importester2.py
tests/: test_converter.py
