[tool.poetry]
name = "calcsforconversion"
version = "0.1.0"
description = "converter for bin and dec numbers"
authors = ["AntoineZappa <antgonbla@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "1.5.4"
setuptools="50.3.0"
toml="0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
